GlobalHeader: Change global header design
- remove help menu
- add my issue and notification menu on top menu
- remove my issue menu in user dropdown menu
- avatar resize to smaller

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -132,10 +132,11 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .avatar-wrap {
     width:32px; height:32px;
-    vertical-align:middle;
+    vertical-align:top;
     overflow:hidden; display:inline-block;
 
     &.small { width:24px; height:24px;   }
+    &.smaller { width:20px; height:20px;   }
     &.mid   { width:64px; height:64px;   }
     &.large { width:128px; height:128px; }
 }
