--- a/app/views/common/navbar.scala.html
+++ b/app/views/common/navbar.scala.html
@@ -56,6 +56,7 @@
                 <a href="@routes.ProjectApp.projects()">@Messages("title.projectList")</a>
             </li>
             @if(appFeedbackUrl){
+            <li class="divider"></li>
             <li>
                 <a href="@appFeedbackUrl" target="_blank">@Messages("title.yobi.feedback")</a>
             </li>
