fix: Workaround for pjax bug at 'my issues' page
Yobi's 'my issues' page has a pjax bug related with BFCache.
Commonly, there are two options to fix it.

- When a user make a page back, reload the page
- When a user make a page back, reload the page's javascripts

This commit is using the second option.

You can see more at https://developer.mozilla.org/en-US/docs/Using_Firefox_1.5_caching

--- a/app/views/issue/my_list.scala.html
+++ b/app/views/issue/my_list.scala.html
@@ -37,10 +37,7 @@ models.support.SearchCondition, project:Project)
     </div>
     <script type="text/javascript">
       $(function(){
-        $yobi.loadModule("issue.List", {
-          "welSearchForm": $("#search"),
-          "elPagination" : $("#pagination")
-        });
+          $yobi.loadModule("issue.List");
       });
     </script>
 }
