title-header: Add header filter at title of posting
Users commonly use [ ] in their issue/board/pull-request
title to define category. We recommended using labels, but -anyway- if
users prefer to use it, I thought that it would be better
to help using it conveniently.

Now, header words of title will be appeared with link color and
work like a filter link. When a user click the header word,
issue/board/pull-request list of same header will be displayed.

--- a/app/views/board/partial_list.scala.html
+++ b/app/views/board/partial_list.scala.html
@@ -32,6 +32,7 @@
         }
     </a>
     <div class="title-wrap">
+        <a href="@routes.BoardApp.post(project.owner, project.name, post.getNumber)" class="title">
         @if(post.notice){
             <span class="label label-notice">@Messages("post.notice")</span>&nbsp;
         }
@@ -40,8 +41,10 @@
         } else {
             <span class="post-id">@post.getNumber</span>
         }
+        </a>
+        @showHeaderWordsInBracketsIfExist(post.title)
         <a href="@routes.BoardApp.post(project.owner, project.name, post.getNumber)" class="title">
-            @post.title
+            @removeHeaderWords(post.title)
         </a>
     </div>
     <div class="infos">
