--- a/app/views/partial_comment_thread.scala.html
+++ b/app/views/partial_comment_thread.scala.html
@@ -49,7 +49,7 @@
     </div>
 
     <ul class="comments">
-        @for(comment: ReviewComment <- thread.reviewComments) {
+        @for(comment: ReviewComment <- thread.reviewComments.sortBy(c => c.createdDate)) {
         <li id="comment-@comment.id" class="comment">
             <div class="comment-avatar">
                 <a href="@routes.UserApp.userInfo(comment.author.loginId)" class="avatar-wrap" data-toggle="tooltip" data-placement="top" title="@comment.author.name">
