--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1,6 +1,6 @@
 //--- common
 .prj {
-    color:#202020;
+    color:#555;
 }
 
 .unsupported {
@@ -439,6 +439,7 @@
             li {
                 float:left;
                 font-size: 14px;
+                font-weight: bold;
                 position: relative;
 
                 a {
@@ -503,6 +504,15 @@
     vertical-align: top;
     .border-radius(10px);
     font-family: @fixed-font-family;
+    font-weight: normal;
+}
+
+.project-new-posting {
+    font-size: 12px;
+    line-height: 14px;
+    font-family: @fixed-font-family;
+    color: @yobi-primary;
+    vertical-align: top;
 }
 
 .project-page-wrap {
