Milestone: enhance form validation
Change the regular expression to prevent wrong date string like 2015-05-2222.
Even if, the changed regular expression can prevent it, but it is still possible to send wrong date sting like 2015-05-99.
So, I've added server-side validation for the case of someone send form data without browser.
Last but not least, in case there are form errors checked by server-side, show the form data that the user sent.

--- a/app/views/milestone/create.scala.html
+++ b/app/views/milestone/create.scala.html
@@ -34,12 +34,12 @@
                     <div class="inner left">
                         <div class="title-wrap">
                             <label for="title">@Messages("milestone.form.title")</label>
-                            <input type="text" name="title" id="title" placeholder="">
+                            <input type="text" name="title" id="title" placeholder="" value="@form.data().get("title")">
                         </div>
                         <div class="content-wrap">
                             <label for="contents">@Messages("milestone.form.content")</label>
                             <div style="position: relative;">
-                                @common.editor("contents")
+                                @common.editor("contents", form.data().get("contents"))
                             </div>
                         </div>
 
@@ -61,7 +61,7 @@
                         <hr/>
                         <p>@Messages("milestone.form.dueDate")</p>
                         <label for="dueDate">
-                            <input type="text" name="dueDate" id="dueDate" class="validate due-date">
+                            <input type="text" name="dueDate" id="dueDate" class="validate due-date" value="@form.data().get("dueDate")">
                         </label>
                         <div id="datepicker" class="date-picker"></div>
 
