ProjectMenu: Fix broken style for number bedge on project menu with IE

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -524,15 +524,18 @@
 }
 
 .project-menu-count {
-    font-size: 12px;
-    line-height: 20px;
-    padding: 1px 5px;
+    display: inline-block;
+    font-size: 10px;
+    line-height: 18px;
+    font-weight: normal;
+    min-width: 8px;
+    padding: 0 6px;
     background-color: @yobi-primary;
     color: #ECF0F1;
-    vertical-align: top;
-    .border-radius(10px);
+    text-align: center;
     font-family: @fixed-font-family;
-    font-weight: normal;
+    vertical-align: top;
+    .border-radius(9px);
 }
 
 .project-new-posting {
