Fix error pages that don't work for anonymous
Error pages wasn't shown correctly for anonymous. The error pages used
a template in app/views/siteLayout.scala.html which ignored the given
content and rendered always the intro page if the current user is
anonymous.

Decide whether to show the intro page or not in index.scala.html not
siteLayout.scala.html.

--- a/app/views/index/index.scala.html
+++ b/app/views/index/index.scala.html
@@ -24,7 +24,9 @@
 @import utils.JodaDateUtil
 
 @siteLayout(utils.Config.getSiteName, utils.MenuType.SITE_HOME) {
-    @if(currentUser != User.anonymous){
+    @if(currentUser == User.anonymous){
+    @partial_intro()
+    } else {
     <div class="page-wrap-outer">
         <div class="page-wrap">
             <div class="site-guide-outer hide">
