--- a/app/views/project/webhooks.scala.html
+++ b/app/views/project/webhooks.scala.html
@@ -4,7 +4,7 @@
 * Copyright 2015 NAVER Corp.
 * http://yobi.io
 *
-* @author Jihwan Chun @ KAIST School of Computing
+* @author Jihwan Chun
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
@@ -18,18 +18,42 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(message: String, webhooks: List[Webhook], project:Project)
+@(message: String, webhooks: List[models.Webhook], project:Project)
 
-@import helper._
+@import utils.TemplateHelper._
+@import utils.AccessControl._
 
 @projectLayout(message, project, utils.MenuType.PROJECT_SETTING) {
-@projectMenu(project, utils.MenuType.PROJECT_SETTING, "")
-<div class="page-wrap-outer">
-    <div class="project-page-wrap">
-        @partial_settingmenu(project)
+  @projectMenu(project, utils.MenuType.PROJECT_SETTING, "")
+  <div class="page-wrap-outer">
+    <div class="project-page-wrap webhook-editor-wrap">
+      @partial_settingmenu(project)
 
-        Hello world!
-</div>
-<link rel="stylesheet" type="text/css" media="screen" href="/assets/javascripts/lib/mentionjs/mention.css">
+      @if(isProjectResourceCreatable(UserApp.currentUser, project, ResourceType.WEBHOOK)) {
+      <form id="formNewWebhook" action="@routes.ProjectApp.newWebhook(project.owner, project.name)" method="post" class="new-webhook-wrap">
+        <strong class="form-legend">@Messages("project.webhook.new")</strong>
+        <div class="form-wrap">
+          <div>
+            <input type="text" name="payload_url" class="input-webhook-payload" maxlength="2048" autocomplete="off" placeholder="@Messages("project.webhook.payloadUrl")">
+            <input type="text" name="secret" class="input-webhook-secret" maxlength="250" autocomplete="off" placeholder="@Messages("project.webhook.secret")">
+          </div>
+        </div>
+        <button type="submit" class="ybtn ybtn-primary btn-submit">@Messages("project.webhook.add")</button>
+      </form>
+      }
 
+      <div id="webhooksList" class="webhook-list-wrap">
+        @partial_webhooks_list(project, webhooks)
+      </div>
+    </div>
+  </div>
+
+  <script type="text/javascript">
+    $(function(){
+      $yobi.loadModule("project.Webhook", {
+        "form": "#formNewWebhook",
+        "list": "#webhooksList"
+      });
+    });
+  </script>
 }
