Get rid of ajax call in webhook.view.

--- a/app/views/project/partial_webhooks_list.scala.html
+++ b/app/views/project/partial_webhooks_list.scala.html
@@ -54,11 +54,8 @@
               </span>
             </td>
             <td class="actions">
-              <button type="button"
-                class="ybtn ybtn-danger ybtn-small"
-                data-webhook-id="@webhook.id"
-                data-delete-uri="@routes.ProjectApp.deleteWebhook(project.owner, project.name, webhook.id)">
-                  @Messages("button.delete")
+              <button type="button" class="ybtn ybtn-danger ybtn-small" data-request-method="delete" data-request-uri="@routes.ProjectApp.deleteWebhook(project.owner, project.name, webhook.id)">
+                @Messages("button.delete")
               </button>
             </td>
           </tr>
